3d printer and starbound integration updates, as well as voice stuf started